--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,7 @@
-# Compiled class file
 *.class
 
-# Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
 *.nar
@@ -19,5 +10,10 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.idea/
+*.iml
+
+log/
+out/
+target/
+build/
