--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.cassiomolin</groupId>
-    <artifactId>patch</artifactId>
+    <artifactId>patch-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
