--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <!-- Dependency versions -->
         <lombok.version>1.18.8</lombok.version>
+        <mapstruct.version>1.3.0.Final</mapstruct.version>
         <jackson.version>2.9.8</jackson.version>
         <javax-json.version>1.1.4</javax-json.version>
         <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
@@ -55,6 +56,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- MapStruct -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
 
         <!-- Apache HTTP Components -->
@@ -132,7 +140,23 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
+                        </path>
                     </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>
+                            -Amapstruct.suppressGeneratorTimestamp=true
+                        </arg>
+                        <arg>
+                            -Amapstruct.suppressGeneratorVersionInfoComment=true
+                        </arg>
+                        <arg>
+                            -Amapstruct.defaultComponentModel=spring
+                        </arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
