--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <!-- Dependency versions -->
         <lombok.version>1.18.8</lombok.version>
+        <guava.version>27.1-jre</guava.version>
         <mapstruct.version>1.3.0.Final</mapstruct.version>
         <jackson.version>2.9.8</jackson.version>
         <javax-json.version>1.1.4</javax-json.version>
@@ -56,6 +57,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <!-- MapStruct -->
